feat: create merchant schedules
