# src/controllers/index.ts
@@ -1,2 +1,3 @@
 export * from "./auth.controller";
 export * from "./user.controller";
+export * from "./merchant.controller";
