# src/interfaces/merchant/merchant.requests.ts
@@ -1,0 +1,5 @@
+export interface CreateSchedule {
+  date: Date;
+  startTime: string;
+  endTime: string;
+}
