# src/interfaces/models/merchant.interface.ts
@@ -2,10 +2,23 @@ import { BaseModel } from "./baseModel";
 
 export interface Merchant extends BaseModel {
   user: string;
-  schedule: Schedule[];
+  schedule: Schedules[];
 }
 
-interface Schedule {
+export interface Schedule extends BaseModel {
+  merchant: string;
+  date: Date;
+  startTime: string;
+  endTime: string;
+  status: ScheduleStatus;
+}
+
+export enum ScheduleStatus {
+  BOOKED = "booked",
+  AVAILABLE = "available",
+}
+
+interface Schedules {
   date: Date;
   startTime: string;
   ednTime: string;
