# src/routes/index.ts
@@ -4,12 +4,14 @@ import authRoutes from "./auth.routes";
 
 import { MainApiValidator } from "../middlewares/openapi.validator";
 import userRoutes from "./user.routes";
+import merchantRoutes from "./merchant.routes";
 
 const router: express.Router = express.Router();
 
 router.use("/", MainApiValidator);
 router.use("/auth", authRoutes);
 router.use("/user", userRoutes);
+router.use("/merchant", merchantRoutes);
 
 router.use("/health", (req, res) => {
   res.send({ status: "OK" });
