# src/routes/user.routes.ts
@@ -1,7 +1,7 @@
 import express from "express";
 import { jwtHelper } from "../helpers/jwt/jwt.helper";
 import { userRole } from "../interfaces";
-import { handleGetUserProfile } from "../controllers";
+import { handleGetUserProfile, handleLogout } from "../controllers";
 
 const userRoutes = express.Router();
 
@@ -9,6 +9,12 @@ userRoutes.get(
   "/me",
   jwtHelper.requirePermission([userRole.USER, userRole.MERCHANT]),
   handleGetUserProfile
+);
+
+userRoutes.get(
+  "/logout",
+  jwtHelper.requirePermission([userRole.USER, userRole.MERCHANT]),
+  handleLogout
 );
 
 export default userRoutes;
